# rust-j2k

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  codecov.yml  deny.toml
.claude/rules/: conventions.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  release.yml  semgrep.yml
docs/: README.md  correctness.md  development.md  roadmap-phase1.md  roadmap-phase2.md  roadmap.md  scope.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode.rs
scripts/: extract-grib2-codestream.py  gen-oracle.sh  gen-tier1-vectors.py  install-oracle-tools.sh  pgx_to_expected.py
src/: dwt.rs  error.rs  image.rs  lib.rs  quant.rs
src/codestream/: markers.rs  mod.rs  tests.rs
src/tier1/: golden_vectors.rs  mod.rs  mq.rs  passes.rs
src/tier2/: bio.rs  mod.rs  tagtree.rs  tests.rs
tests/: conformance.rs  conformance_corpus.rs
tests/fixtures/: README.md  eta_lambert_irreversible.expected.json  eta_lambert_irreversible.j2k  eta_lambert_lossless.expected.json  eta_lambert_lossless.j2k  jpeg2000_regular_latlon.expected.json  jpeg2000_regular_latlon.j2k  regular_latlon_lossy.expected.json  regular_latlon_lossy.j2k
tests/fixtures/conformance/: README.md  manifest.json  regenerate.py
tests/support/: mod.rs
