[package]
name         = "rust-j2k"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.87"
license      = "MIT OR Apache-2.0"
description  = "Pure-Rust JPEG 2000 (ISO/IEC 15444) codec, built GRIB2-decode-first toward OpenJPEG-level coverage."
authors      = ["D0ubleD0uble <15200182+D0ubleD0uble@users.noreply.github.com>"]
repository   = "https://github.com/D0ubleD0uble/rust-j2k"
readme       = "README.md"
keywords     = ["jpeg2000", "j2k", "codec", "grib2"]
categories   = ["multimedia::images", "encoding"]

# docs.rs builds: enable the `docsrs` cfg so `#[doc(cfg(...))]` annotations render
# once features land, and build all features so nothing is hidden.
[package.metadata.docs.rs]
all-features   = true
rustdoc-args   = ["--cfg", "docsrs"]

# Decode-only and self-contained on purpose: no third-party codec dependency, so
# the crate stays pure-Rust and cross-compiles to every target with no C toolchain.
[dependencies]

[dev-dependencies]
# Test-only: deserialize the committed `<name>.expected.json` oracle snapshots
# the conformance harness compares against. Pure-Rust, so the no-C-dependency
# rule still holds; these never ship in the library.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
